hphp/test/quick/unwind_backtrace.php.expectf
wat
~something
HipHop Notice: Undefined index: object in %s on line 10
NULL
HipHop Fatal error: Uncaught exception 'Exception' with message 'asd' in %s
